--- a/css/style.css
+++ b/css/style.css
@@ -1,73 +1,88 @@
 * {
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
-*:before, *:after {
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
+*:before,
+*:after {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
-a{
+
+a {
     text-decoration: none;
     display: inline-block;
 }
-.container{
+
+.container {
     max-width: 1170px;
     margin: 0 auto;
     padding: 0 15px;
 }
-body{
-/*font-family: 'Roboto', light;*/
-font-family: 'PT Serif', light;
-font-weight: 400;
-line-height: 18px;
-color: #5e5e5e;
+
+body {
+    /*font-family: 'Roboto', light;*/
+    font-family: 'PT Serif', light;
+    font-weight: 400;
+    line-height: 18px;
+    color: #5e5e5e;
+    min-width: 1170px;
 }
-header{
+
+header {
     font-family: 'Roboto', light;
     line-height: 85px;
     background-color: #05070C;
 }
-.header__content-inner{
+
+.header__content-inner {
     display: flex;
     justify-content: space-between;
 }
-.menu li{
+
+.menu li {
     display: inline-block;
 }
-.menu a{
+
+.menu a {
     color: #FFFFFB;
     font-size: 16px;
     line-height: 36px;
     border: 1px solid transparent;
     padding: 0px 16px;
-    transition: all .4s; 
+    transition: all .4s;
 }
+
 .menu a:hover {
     border-color: #FFFFFB;
 }
-.menu li + li{
+
+.menu li+li {
     padding-left: 10px;
 }
-#modal{
+
+#modal {
     display: none;
 }
-.slider{
+
+.slider {
     background-image: url(../img/pexels-photo-5380651.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     min-height: 1000px;
 }
-.slider__item-content{
+
+.slider__item-content {
     text-align: center;
     padding-top: 200px;
     max-width: 665px;
     margin: 0 auto;
 }
-.slider__title{
+
+.slider__title {
     text-transform: uppercase;
     font-size: 35px;
     line-height: 36px;
@@ -79,20 +94,23 @@ header{
     font-weight: 100;
     text-align: center;
 }
-.slider__text{
+
+.slider__text {
     text-align: center;
     line-height: 20px;
     /* font-size: 16px; */
     font-weight: 100;
     color: #D3D2D2;
 }
-.slider__item-content1{
+
+.slider__item-content1 {
     text-align: center;
     padding-top: 250px;
     max-width: 665px;
     margin: 0 auto;
 }
-.slider__title1{
+
+.slider__title1 {
     text-transform: uppercase;
     font-size: 20px;
     line-height: 36px;
@@ -102,24 +120,26 @@ header{
     margin-bottom: 15px;
     font-family: 'PT Serif', sans-serif;
 }
-.slider__text1{
+
+.slider__text1 {
     line-height: 32px;
     font-size: 20px;
     color: #FFFFFB;
 }
 
-.icons img{
+.icons img {
     width: 200px;
 }
 
-.icons p{
+.icons p {
     color: rgb(247, 247, 247);
     text-align: center;
     font-size: 24px;
 }
+
 .icons_first {
     padding-top: 70px;
-    display: flex; 
+    display: flex;
     justify-content: space-between;
     align-items: center;
     margin: 0 auto;
@@ -128,21 +148,22 @@ header{
 
 .icons_second {
     padding-top: 30px;
-    display: flex; 
+    display: flex;
     justify-content: space-between;
     align-items: center;
     margin: 0 auto;
     width: 60%;
 }
 
-.icons img:hover  {
+.icons img:hover {
     opacity: 70%;
 }
 
-.icons p:hover{
-    color:#ffcfc3;
+.icons p:hover {
+    color: #ffcfc3;
 }
-.footer__copy{
+
+.footer__copy {
     background-color: #05070C;
     text-align: center;
     font-size: 12px;
@@ -153,4 +174,3 @@ header{
     color: #FFFFFB;
     margin-top: 100px;
 }
-
